@@ -1,3 +1,8 @@
+2011-02-22  Francois Ingrand  <felix@pr2c1>
+
+	* send-message.c: Another 32/64 bits problem... with the message
+	passer on 64 bits machines. I now use uint32_t everywhere...
+
 2011-02-20  Francois Felix Ingrand  <felix@ingrand.net>
 
 	* parser-funct.c (replace_env_string): 
